<resources>
    <string name="app_name">Weather App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name_dummy">Angeline Cooper</string>
    <string name="location_dummy">Bekasi, Indonesia</string>
    <string name="imagebutton">ImageButton</string>
    <string name="bekasi">Bekasi</string>
    <string name="location_dummy_2">Perth, Australia</string>
    <string name="add_city">Add city</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="perth">Perth</string>
    <string name="imageview">ImageView</string>
</resources>