<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_500dp"
    android:layout_marginTop="@dimen/_20dp"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/_35dp"
            android:layout_height="@dimen/_35dp"
            android:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/name_dummy"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_200dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_bekasi"
            android:layout_width="@dimen/_24dp"
            android:layout_height="@dimen/_24dp"
            android:background="@color/white"
            android:contentDescription="@string/imagebutton"
            android:src="@drawable/ic_location"
            android:theme="@style/Theme.WeatherApp.New" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_bekasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                android:text="@string/location_dummy"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_sub_bekasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                android:text="@string/bekasi"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_perth"
            android:layout_width="@dimen/_24dp"
            android:layout_height="@dimen/_24dp"
            android:background="@color/white"
            android:contentDescription="@string/imagebutton"
            android:src="@drawable/ic_location"
            android:theme="@style/Theme.WeatherApp.New" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_perth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                android:text="@string/location_dummy_2"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_sub_perth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                android:text="@string/perth"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_create"
            android:layout_width="@dimen/_24dp"
            android:layout_height="@dimen/_24dp"
            android:background="@color/white"
            android:contentDescription="@string/imagebutton"
            android:src="@drawable/ic_add_location"
            android:theme="@style/Theme.WeatherApp.New" />

        <TextView
            android:id="@+id/tv_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:text="@string/add_city"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>


